--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,8 +97,7 @@ a {
     }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        color: lighten($brand-color, 30%);
     }
 }
 
@@ -128,27 +127,31 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+    background-color: #191919;
 }
 
 code {
-    padding: 1px 5px;
+    color:#efefef;
+    font-size: 13px;
+    margin: 0 4px;
+    padding: 4px 6px;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
+    padding: 8px 15px;
+    background: #191919;
+    border: 1px solid #121212;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+    overflow: auto;
+    overflow-y: hidden;
 
     > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
+        color: #efefef;
+        text-shadow: 0px 1px 0px #000;
+        margin: 0;
+        padding: 0;
     }
 }
-
-
 
 /**
  * Wrapper
