--- a/css/main.scss
+++ b/css/main.scss
@@ -3,21 +3,19 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: 'Lato', sans-serif;;
+$base-font-size:   20px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:       #f0e7d5;
+$background-color: #252525;
+$brand-color:      #ffcc00;
 
-$grey-color:       #828282;
+$grey-color:       #f0e7d5;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
