--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,7 +20,13 @@ body {
     font-weight: 300;
     color: $text-color;
     background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
+    background: $background-color;
+    background-attachment: fixed !important;
+    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #2a2a29), color-stop(100%, #1c1c1c));
+    background: -webkit-linear-gradient(#2a2a29, #1c1c1c);
+    background: -moz-linear-gradient(#2a2a29, #1c1c1c);
+    background: -o-linear-gradient(#2a2a29, #1c1c1c);
+    background: linear-gradient(#2a2a29, #1c1c1c);
 }
 
 
@@ -80,10 +86,9 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
+    color:#e8e8e8;
+    font-weight: normal;
 }
-
-
 
 /**
  * Links
