--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 1px solid darken($text-color, 20%);
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -92,7 +91,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    border-top: 1px solid darken($text-color, 20%);
     padding: $spacing-unit 0;
 }
 
