Várias modificações. See more.
- Adicionado página Archive;
- Adicionado animate.css;
- Página Home modificada.
- Várias outras pequenas modificações.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -98,11 +98,11 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: $brand-color-visited;
     }
 
     &:hover {
-        color: lighten($brand-color, 30%);
+        color: $brand-color-hover;
     }
 }
 
@@ -210,3 +210,7 @@ pre {
         }
     }
 }
+
+/**
+ * Others
+ */
