--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,86 +2,57 @@
  * Site header
  */
 .site-header {
-    border-bottom: 1px solid darken($text-color, 20%);
+    border-top: 5px solid $brand-color-visited;
     min-height: 56px;
+    text-align: center;
 
     // Positioning context for the mobile navigation icon
     position: relative;
-}
 
-.site-title {
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
+    .header-title {
+        font-size: 42px;
+        letter-spacing: -1px;
+        line-height: 1;
 
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
-}
+        > a {
+            // color: #fff;
+            font-weight: normal;
+        }
 
-.site-nav {
-    float: right;
-    line-height: 56px;
+        @include media-query($on-laptop) {
+            font-size: 36px;
+        }
 
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
+        &,
+        &:visited {
+            color: $grey-color-dark;
         }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
+    .header-description {
+        font-size: 16px;
+        font-style: italic;
+    }
 
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
+    .site-logo img {
+        width:100px;
+        height:100px;
+        border:4px solid #fff;
+        -webkit-border-radius:100px;
+        -moz-border-radius:100px;
+        border-radius:100px;
+        -webkit-animation-delay:.05s;
+        -moz-animation-delay:.05s;
+        -o-animation-delay:.05s;
+        animation-delay:.05s;
+        -webkit-animation-duration:1s;
+        -moz-animation-duration:1s;
+        -o-animation-duration:1s;
+        animation-duration:1s
+    }
 
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-        }
+    .wrapper {
+        margin-top: $spacing-unit;
     }
 }
 
@@ -91,67 +62,21 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid darken($text-color, 20%);
+    // border-top: 1px solid darken($text-color, 20%);
     padding: $spacing-unit 0;
-}
+    text-align: center;
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
+    .footer-social {
+        margin-bottom: $spacing-unit / 2;
 
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
+        > a {
+            margin-right: $spacing-unit / 2;
+        }
     }
 
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+    .footer-description {
+        font-size: 16px;
+        font-style: italic;
     }
 }
 
@@ -173,7 +98,12 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit / 4;
+        border-bottom:1px solid rgba(250,250,250,0.1);
+
+        > span {
+            float:right
+        }
     }
 }
 
@@ -233,3 +163,52 @@
         }
     }
 }
+
+/**
+ * Entry
+ */
+.entry-wrapper {
+    .entry-header {
+
+    }
+
+    .entry-content {
+
+    }
+
+    .entry-date {
+        font-size: 14px;
+        float:right;
+    }
+
+}
+
+.pagination {
+    text-align:center
+}
+
+.btn {
+    display:inline-block;
+    padding: 8px 20px;
+    margin-top: $spacing-unit / 2;
+    font-size: 14px;
+    color: $brand-color;
+    background-color: $grey-color-light;
+    border: 2px solid $grey-color-dark !important;
+    -webkit-border-radius:20px;
+    -moz-border-radius:20px;
+    border-radius:20px;
+
+    &:visited {
+        color: $brand-color-visited;
+        background-color: darken($grey-color, 15%);
+    }
+
+    &:hover {
+        color: $brand-color-hover;
+        // border: 2px solid $grey-color-light !important;
+        // background: lighten($grey-color-dark, 5%);
+    }
+}
+
+
