--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,39 @@
+<div class="navigation-wrapper">
+  <nav role="navigation" id="site-nav" class="animated fadeInDownBig">
+      <ul>
+        <li>
+          <a href="/"> Home</a>
+        </li>
+        <li>
+          <a href="/archive"> Arquivos</a>
+        </li>
+        <li>
+          <a href="/about"> Sobre</a>
+        </li>
+        <li>
+          <a href="/feed.xml" title="RSS feed"><i class="fa fa-rss"></i> Feed</a>
+        </li>
+
+      </ul>
+  </nav>
+</div>
+
 <header class="site-header">
 
   <div class="wrapper">
 
-    <!-- <div class="master-header"> -->
-      <div class="wrap">
-        <a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}">
-          <!-- <img src="http://jeffreysambells.com/img/avatar-300.png" width="200" height="200" alt="{{ site.title }} logo" class="animated fadeInDown"> -->
-        </a>
-      </div>
+    <div class="wrap">
+      <a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}">
+        <img src="http://jeffreysambells.com/img/avatar-300.png" width="200" height="200" alt="{{ site.title }} logo">
+      </a>
+    </div>
 
-      <div class="header-title animated fadeIn"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></div>
-      <p class="header-description animated fadeIn">{{ site.description }}</p>
+    <div class="header-title animated fadeIn">
+      <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    </div>
+
+    <p class="header-description animated fadeIn">{{ site.description }}</p>
+
   </div>
 
 </header>
