--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -170,9 +170,12 @@
     margin-bottom: $spacing-unit;
 }
 
+
 .post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
+    font-family: 'Volkhov', sans-serif;
+    font-size: $base-font-size * 3;
+    font-style: italic;
+    letter-spacing: -3px;
     line-height: 1;
 
     @include media-query($on-laptop) {
@@ -214,6 +217,16 @@
 .entry-wrapper {
     .entry-header {
 
+        .entry-title {
+            font-family: 'Volkhov', sans-serif;
+            font-style: italic;
+            font-weight: 400;
+            line-height: 1;
+            text-align: center;
+            font-size: $base-font-size * 3;
+            margin-bottom: $spacing-unit * 2;
+            letter-spacing: -3px;
+        }
     }
 
     .entry-content {
