--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,17 @@ layout: default
 <div class="post">
 
   <header class="post-header">
+
     <h1 class="post-title">{{ page.title }}</h1>
+
+    {% for tag in page.tags limit:5%}
+        <a class="tag-link" href="/tags/#{{ tag }}">{{ tag | upcase }}</a>
+
+        {% if tag != page.tags[4] and tag != page.tags.last %}
+            •
+        {% endif %}
+    {% endfor %}
+
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }} • {% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
