Translate to english and add About page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,18 +2,17 @@
   <nav role="navigation" id="site-nav" class="animated fadeInDownBig">
       <ul>
         <li>
-          <a href="/"> Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
-          <a href="/archive"> Arquivos</a>
+          <a href="/archives">Arquives</a>
         </li>
-        <!-- <li>
-          <a href="/about"> Sobre</a>
-        </li> -->
+        <li>
+          <a href="/about">About</a>
+        </li>
         <li>
           <a href="/feed.xml" title="RSS feed"><i class="fa fa-rss"></i> Feed</a>
         </li>
-
       </ul>
   </nav>
 </div>
@@ -22,11 +21,11 @@
 
   <div class="wrapper">
 
-    <div class="wrap">
+    <!-- <div class="wrap">
       <a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}">
         <img src="http://jeffreysambells.com/img/avatar-300.png" width="200" height="200" alt="{{ site.title }} logo">
       </a>
-    </div>
+    </div> -->
 
     <div class="header-title animated fadeIn">
       <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
