--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,7 +10,7 @@
   position: relative;
 
   .header-title {
-    font-size: 42px;
+    font-size: 2rem;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -30,7 +30,7 @@
   }
 
   .header-description {
-    font-size: 16px;
+    font-size: 1rem;
     font-style: italic;
   }
 
@@ -137,7 +137,7 @@
 
 .page-title {
   font-family: 'Volkhov', sans-serif;
-  font-size: $base-font-size * 3;
+  font-size: 3rem;
   font-style: italic;
   letter-spacing: -3px;
   line-height: 1;
