style: add more constrast between foreground and background

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -161,7 +161,7 @@ hr {
 }
 
 .post-meta {
-  color: $medium-gray-color;
+  color: #757575;
   text-transform: uppercase;
   display: inline-block;
   letter-spacing: 1px;
