--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -67,7 +67,7 @@ $medium-gray-color: #999;
 $light-gray-color: #ccc;
 
 // Font Colors
-$base-font-color: rgba($dark-gray-color, .8);
+$base-font-color: #4b4b4b;
 
 // Border
 $base-border-color: $light-gray-color;
