--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -275,10 +275,15 @@ hr {
     margin-right: 1em;
   }
 
+  .post-container {
+    margin: 0;
+  }
+
   .post-item {
     border: 1px solid lighten($light-gray-color, 10%);
     padding: 0 0.5em;
     background: lighten($light-gray-color, 15%);
+    list-style: none;
   }
 
   .article-title {
